# agriculture

./: .gitignore  README.md  docker-compose.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  download_models.py  pyproject.toml
api/agri_backend/: apps.py  settings.py  urls.py  views.py
api/crop_rf/: apps.py  urls.py  views.py
api/crop_yield/: apps.py  urls.py  views.py
api/predictor/: gpt_engine.py  run.py  urls.py  views.py
api/soil_fertility/: apps.py  urls.py  views.py
api/training/: TrainFineModel.py
api/utils/: constants.py  models.py  response.py
docs/: api.md  guide.md  installation.md
web/: .dockerignore  .env.example  .gitignore  Dockerfile  auth.config.ts  auth.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/about/: page.jsx  page.tsx
web/app/contact/: page.jsx  page.tsx
web/app/contribution/: page.tsx
web/app/dashboard/: layout.tsx  page.tsx
web/app/debug-env/: page.tsx
web/app/docs/: page.tsx
web/app/login/: page.tsx
web/app/managing/: page.tsx
web/app/profile/: page.tsx
web/app/services/: page.tsx
web/app/signup/: page.tsx
web/app/stocks/: page.tsx
web/components/: Providers.tsx
web/components/AboutSection/: AboutSection.tsx
web/components/ChatBotWidget/: ChatBotWidget.tsx
web/components/Climate/: Climate.tsx
web/components/Footer/: Footer.tsx
web/components/Hero/: Hero.tsx
web/context/: AuthContext.tsx
web/lib/: api.ts  constants.ts
web/prisma/: schema.prisma  seed.js
(+26 files in other folders)
